--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "mongodb": "^6.20.0",
     "next": "16.0.1",
     "ogl": "^1.0.11",
+    "posthog-js": "^1.284.0",
+    "posthog-node": "^5.11.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
